# buddyctl-cli

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE_HEADER.py  NOTICE  README.md  pyproject.toml  test_agent_fix.py  test_apply_diff.py  test_extract_real_case.py  test_json_extraction.py  test_stackspot_api.sh  test_stackspot_chain_integration.py  test_two_phase.sh
buddyctl/: __init__.py  __main__.py  agent_validator.py  api_client.py  auth.py  autosuggestion.py  banner.py  chat_client.py  config.py  enhanced_input.py  file_autocomplete.py  file_indexer.py  interactive.py  main.py  pyvenv.cfg  visual_suggestions.py
buddyctl/cli/: agent_validator.py  chat_client.py  interactive.py  interactive_mode_handler.py
buddyctl/core/: api_client.py  auth.py  config.py  logging.py  provider_registry.py  provider_validator.py
buddyctl/core/dependency_analyzer/: __init__.py  base.py  factory.py  kotlin_extractor.py  python_extractor.py
buddyctl/core/providers/: __init__.py  base.py  manager.py
buddyctl/core/providers/adapters/: __init__.py  anthropic.py  google.py  openai.py  stackspot.py
buddyctl/integrations/langchain/: README.md  __init__.py  agents.py  chains.py  chat_model.py  context_formatter.py  judge_agent.py  tools.py  utils.py
buddyctl/integrations/langchain/chains/: __init__.py  base.py  legacy.py  stackspot_chain.py
buddyctl/integrations/langchain/examples/: calculator.py  calculator_example.py
buddyctl/integrations/langchain/executors/: __init__.py  native_tool_executor.py  prompted_tool_executor.py
buddyctl/integrations/langchain/prompts/: __init__.py  loader.py
buddyctl/integrations/langchain/prompts/templates/: code_agent.md  code_agent_auto.md  code_agent_interactive.md  error_recovery.md  tool_instructions.md
buddyctl/langchain_integration/: README.md  __init__.py  chains.py  chat_model.py  code_differ_example.py  tools.py  utils.py
buddyctl/ui/: autosuggestion.py  banner.py  enhanced_input.py  message_box.py  visual_suggestions.py
buddyctl/utils/: file_autocomplete.py  file_indexer.py
prompts/: README.md  judge_agent.md  main_agent.md
