[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buddyctl"
version = "0.1.0"
description = "CLI tool for buddy management"
authors = [{name = "Evellyn"}]
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.24.0",
    "prompt_toolkit>=3.0.0",
]
requires-python = ">=3.8"

[project.scripts]
buddyctl = "buddyctl.main:app"

[tool.hatch.build.targets.wheel]
packages = ["buddyctl"]