[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "buddyctl"
version = "0.0.11"
description = "CLI tool for managing StackSpot AI assistants (buddies)"
authors = ["Evellyn <ecosta.inf@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/evellyncosta/buddyctl-cli"
repository = "https://github.com/evellyncosta/buddyctl-cli"
documentation = "https://github.com/evellyncosta/buddyctl-cli#readme"
keywords = ["cli", "stackspot", "ai", "assistant", "chat", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "buddyctl"}]
include = ["README.md", "LICENSE", ".env.example"]
exclude = ["tests/*", ".doc/*", ".github/*"]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
httpx = "^0.24.0"
prompt-toolkit = "^3.0.0"
langchain = "^0.3.27"
langchain-core = "^0.3.27"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
buddyctl = "buddyctl.main:app"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=buddyctl --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false